--- a/_config.yml
+++ b/_config.yml
@@ -24,40 +24,40 @@ author:
   avatar           : "profile.png"
   name             : "Abbas Hommadi"
   pronouns         : # example: "she/her"  
-  bio              : "Short biography for the left-hand sidebar"
+  bio              : "Lecturer Assistant & Senior Programmer"
   location         : "Hilla, Babylon, Iraq"
   employer         : "University of Babylon"
-  uri              : # URL
+  uri              : "https://it.uobabylon.edu.iq/staff_profile.aspx?staff=1000018"
   email            : "abbas.hommadi@gmail.com" 
 
   # Academic websites
   arxiv            : # URL - Update with the correct link to your profile
-  googlescholar    : "https://scholar.google.com/citations?user=PS_CX0AAAAAJ"
+  googlescholar    : "https://scholar.google.com/citations?user=0wD2jJgAAAAJ&hl=en&oi=ao"
   impactstory      : # URL
-  orcid            : "http://orcid.org/yourorcidurl"
+  orcid            : "https://orcid.org/0009-0008-1522-8522"
   semantic         : # URL
-  pubmed           : "https://www.ncbi.nlm.nih.gov/pubmed/?term=john+snow"
-  researchgate     : # URL
+  pubmed           : # "https://www.ncbi.nlm.nih.gov/pubmed/?term=john+snow"
+  researchgate     : "https://www.researchgate.net/profile/Abbas-Hommadi-2"
 
   # Repositories and software development
   bitbucket        : # Username - Update with your username on the site
   codepen          : # Username
   dribbble         : # Username
-  github           : "academicpages"
+  github           : "abbashommadi"
   kaggle           : # Username  
   stackoverflow    : # User number or user number and name (i.e., use "1" or "1/jeff-atwood")    
 
   # Social media
-  bluesky          : "bsky.app" # Replace this with you Bluesky username
-  facebook         : # Username
+  bluesky          : # "bsky.app" # Replace this with you Bluesky username
+  facebook         : # "abbas.hommadi"
   flickr           : # Username
   foursquare       : # Username
   goodreads        : # Username
   google_plus      : # Username
   keybase          : # Username
-  instagram        : # Username
+  instagram        : # "abbas.hommadi"
   lastfm           : # Username
-  linkedin         : # Username
+  linkedin         : "abbashommadi"
   mastodon         : # URL
   medium           : # URL
   pinterest        : # Username
